# sbe

./: CMakeLists.txt  README.md
config/: SimpleBinary1-0.xsd
example/: .car.c.swp  CMakeLists.txt  car.c  car.cs  car.h  car.py  car.xml  car_decoder.c  car_decoder_priv.h  car_encoder.c  car_encoder_priv.h  gen.sh  tests.cc
example2/: CMakeLists.txt  c_decoder_lab.jinja2  c_encoder_lab.jinja2  car.xml  car_codec_lab.c  car_decoder_lab.c  custom_group_size_encoding.c  custom_group_size_encoding.h  gen.sh  group_size_encoding.c  group_size_encoding.h  location.h  message_header.h  space.txt  tests.cc  utils.c  utils.h
example3/: CMakeLists.txt  gen.sh  main.cc  proto.h  proto.xml  proto_decoder.c  proto_encoder.c  proto_encoder_priv.h  tests.cc  utils.c
solution/: car.c  car.h  car.xml
